# trainer

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  README.packagers  README.packagers.md  org.kde.trainer.appdata.xml  org.kde.trainer.desktop
autotests/: CMakeLists.txt  trainerqmltests.cpp
src/: CMakeLists.txt  Messages.sh  exercisefile.cpp  exercisefile.h  main.cpp  resources.qrc
src/data/: short.json  simple.json  simple.json.license
src/qml/: ExercisesCollection.qml  ExercisesRunnerDrawer.qml  OneExercise.qml  SoundTimer.qml  TimeDisplay.qml  TrainerMainWindow.qml
